--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,15 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+# Python / FastAPI / AI
+__pycache__/
+*.py[cod]
+venv/
+env/
+*.egg-info/
+*.pkl
+*.pt
+*.onnx
+*.ipynb_checkpoints/
+
